--- a/main.html
+++ b/main.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+	<div class="card">
+        <img src="https://via.placeholder.com/300" alt="Product Image" class="card-image">
+        <h1 class="card-title">Product Title</h1>
+        <p class="card-price">$19.99</p>
+        <p class="card-description">This is a brief description of the product or service. It highlights the main features and benefits.</p>
+        <button class="buy-now">Buy Now</button>
+    </div>
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
