--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<div class="card">
         <img src="https://via.placeholder.com/300" alt="Product Image" class="card-image">
-        <h1 class="card-title">Product Title</h1>
-        <p class="card-price">$19.99</p>
+        <h1 class="card-title">Pricing Card</h1>
+        <p class="card-price">Price: Rs.200</p>
         <p class="card-description">This is a brief description of the product or service. It highlights the main features and benefits.</p>
         <button class="buy-now">Buy Now</button>
     </div>
